--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,36 +1,32 @@
-<div class="dc-home dc-home__background-color">
+<div class="fw-home fw-home__background-color">
   <div class="d-flex justify-content-center">
     <div class="col-12 col-md-5 flex-column align-item-center">
-      <div class="row dc-home__lpgrow">
-        <h1 class="dc-home__landingh1">
+      <div class="row fw-home__lpgrow">
+        <h1 class="fw-home__landingh1">
           Restaurant food, takeaway and groceries.
           <span style="color: #d61212">Delivered.</span>
         </h1>
-        <div class="dc-home__searchbar">
+        <div class="fw-home__searchbar">
           <div class="row">
-            <label class="dc-home__searchbar-text">
+            <label class="fw-home__searchbar-text">
               <p>Enter a postcode to see what we deliver</p></label
             >
             <div class="container">
               <div class="row">
-                <div class="dc-home__search-bar">
-                  <div class="dc-home__searchbar-bg">
+                <div class="fw-home__search-bar">
+                  <div class="fw-home__searchbar-bg">
                     <img
                       src="assets\svg\home\navigation.svg"
                       alt="navigation-button"
-                      class="dc-home__searchbar-svg"
+                      class="fw-home__searchbar-svg"
                     />
                     <input
                       type="text"
-                      class="dc-home__search-input"
+                      class="fw-home__search-input"
                       placeholder="e.g. EC4R 3TE"
                     />
-                    <div class="dc-home__btn">
-                      <button
-                        mat-stroked-button
-                        class="dc-home__search-btn"
-                        style="background-color: #d61212"
-                      >
+                    <div class="fw-home__btn">
+                      <button mat-stroked-button class="fw-home__search-btn">
                         Search
                       </button>
                     </div>
@@ -38,9 +34,9 @@
                 </div>
               </div>
             </div>
-            <span class="dc-home__login-white-text"
+            <span class="fw-home__login-white-text"
               ><p>
-                <a class="dc-home__logintext" routerLink="login">Log in</a>
+                <a class="fw-home__logintext" routerLink="login">Log in</a>
                 for your recent addresses.
               </p></span
             >
@@ -53,16 +49,16 @@
 <br />
 <br />
 <div class="container">
-  <div class="row dc-home__card-row">
+  <div class="row fw-home__card-row">
     <mat-card>
-      <mat-card-content class="dc-home__matcard">
+      <mat-card-content class="fw-home__matcard">
         <div class="row">
           <div class="col">
             <span>
-              <h2 class="dc-home__tocheading">Track orders to your door</h2>
+              <h2 class="fw-home__tocheading">Track orders to your door</h2>
             </span>
             <div>
-              <p class="dc-home__tocpara">
+              <p class="fw-home__tocpara">
                 Get your favourite food delivered in a flash. You’ll see when
                 your rider’s picked up your order, and be able to follow them
                 along the way. You’ll get a notification when they’re nearby,
@@ -99,18 +95,18 @@
 
 <br />
 <div>
-  <div class="d-flex dc-home__discount-area">
+  <div class="d-flex fw-home__discount-area">
     <div class="container">
       <div class="row">
-        <h2 class="dc-home__discount-heading">Up to 25% off - Meal Deals</h2>
+        <h2 class="fw-home__discount-heading">Up to 25% off - Meal Deals</h2>
       </div>
       <div class="row">
-        <p class="dc-home__discount-para1">
+        <p class="fw-home__discount-para1">
           Need a midweek pick-me-up, a break from cooking for the family or just
           fancy your favourite restaurant?
         </p>
       </div>
-      <div class="row dc-home__discount-para2">
+      <div class="row fw-home__discount-para2">
         <p>
           Service and delivery fees, subject to availability. Participating
           restaurants only. T&Cs apply. <a href="" style="color: #fff">Terms</a>
@@ -125,24 +121,24 @@
 <br />
 
 <div class="container">
-  <div class="row dc-home__card-row align-items-end">
-    <div class="col-md dc-home__card">
-      <mat-card class="dc-home__mat-card01">
+  <div class="row fw-home__card-row align-items-end">
+    <div class="col-md fw-home__card">
+      <mat-card class="fw-home__mat-card01">
         <mat-card-footer>
-          <div class="dc-home__matcard-body">
-            <h2 class="dc-home__matcard-heading">Partner with us</h2>
-            <p class="dc-home__matcard-paragraph">
+          <div class="fw-home__matcard-body">
+            <h2 class="fw-home__matcard-heading">Partner with us</h2>
+            <p class="fw-home__matcard-paragraph">
               Join Deliveroo and reach more customers than ever. We handle
               delivery, so you can focus on the food.
             </p>
             <div class="d-flex">
               <div class="row" style="margin-left: 0px">
-                <a href="#" mat-stroked-button class="dc-home__card-button"
+                <a href="#" mat-stroked-button class="fw-home__card-button"
                   >Get Start
                   <img
                     src="assets\svg\home\arrows-cards.svg"
                     alt="arrow"
-                    width="28px"
+                    class="fw-home__arrow-img"
                 /></a>
               </div>
             </div>
@@ -151,23 +147,23 @@
         </mat-card-footer>
       </mat-card>
     </div>
-    <div class="col-md dc-home__card">
-      <mat-card class="dc-home__mat-card02">
+    <div class="col-md fw-home__card">
+      <mat-card class="fw-home__mat-card02">
         <mat-card-footer>
-          <div class="dc-home__matcard-body">
-            <h2 class="dc-home__matcard-heading">Ride with us</h2>
-            <p class="dc-home__matcard-paragraph">
+          <div class="fw-home__matcard-body">
+            <h2 class="fw-home__matcard-heading">Ride with us</h2>
+            <p class="fw-home__matcard-paragraph">
               The freedom to fit work around your life. Plus great fees, perks
               and discounts.
             </p>
             <div class="d-flex">
               <div class="row" style="margin-left: 0px">
-                <a href="#" mat-stroked-button class="dc-home__card-button"
+                <a href="#" mat-stroked-button class="fw-home__card-button"
                   >Get Start
                   <img
                     src="assets\svg\home\arrows-cards.svg"
                     alt="arrow"
-                    width="28px"
+                    class="fw-home__arrow-img"
                 /></a>
               </div>
             </div>
@@ -178,24 +174,24 @@
   </div>
 </div>
 <div class="container">
-  <div class="row dc-home__card-row">
-    <div class="col-md dc-home__card">
-      <mat-card class="dc-home__mat-card03">
+  <div class="row fw-home__card-row">
+    <div class="col-md fw-home__card">
+      <mat-card class="fw-home__mat-card03">
         <mat-card-footer>
-          <div class="dc-home__matcard-body">
-            <h2 class="dc-home__matcard-heading">Deliveroo For Work</h2>
-            <p class="dc-home__matcard-paragraph">
+          <div class="fw-home__matcard-body">
+            <h2 class="fw-home__matcard-heading">Deliveroo For Work</h2>
+            <p class="fw-home__matcard-paragraph">
               Looking for a workplace food solution to reward your team, boost
               morale or treat your clients? Our corporate team can help.
             </p>
             <div class="d-flex">
               <div class="row" style="margin-left: 0px">
-                <a href="#" mat-stroked-button class="dc-home__card-button"
+                <a href="#" mat-stroked-button class="fw-home__card-button"
                   >Get Start
                   <img
                     src="assets\svg\home\arrows-cards.svg"
                     alt="arrow"
-                    width="28px"
+                    class="fw-home__arrow-img"
                 /></a>
               </div>
             </div>
@@ -203,23 +199,23 @@
         </mat-card-footer>
       </mat-card>
     </div>
-    <div class="col-md dc-home__card">
-      <mat-card class="dc-home__mat-card04">
+    <div class="col-md fw-home__card">
+      <mat-card class="fw-home__mat-card04">
         <mat-card-footer>
-          <div class="dc-home__matcard-body">
-            <h2 class="dc-home__matcard-heading">Gift Cards</h2>
-            <p class="dc-home__matcard-paragraph">
+          <div class="fw-home__matcard-body">
+            <h2 class="fw-home__matcard-heading">Gift Cards</h2>
+            <p class="fw-home__matcard-paragraph">
               Looking for an easy way to treat your friends and family? Give the
               gift of great food with a Deliveroo gift card.
             </p>
             <div class="d-flex">
               <div class="row" style="margin-left: 0px">
-                <a href="#" mat-stroked-button class="dc-home__card-button"
+                <a href="#" mat-stroked-button class="fw-home__card-button"
                   >Get Start
                   <img
                     src="assets\svg\home\arrows-cards.svg"
                     alt="arrow"
-                    width="28px"
+                    class="fw-home__arrow-img"
                 /></a>
               </div>
             </div>
