--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -3,12 +3,12 @@
     <div
       class="col-12 col-md-5 d-flex justify-content-center flex-column align-item-center"
     >
-      <h1 class="dc-login__h1">Sign up or log in</h1>
-      <button mat-button class="dc-login__button--blue">
+      <h1 class="fw-login__h1">Sign up or log in</h1>
+      <button mat-button class="fw-login__button--blue">
         <img src="assets\svg\facebook-icon.svg" alt="Facebook" height="24px" />
         Continue with Facebook
       </button>
-      <button mat-button class="dc-login__button--white">
+      <button mat-button class="fw-login__button--white">
         <img
           src="assets\svg\google-color-icon.svg"
           alt="Google"
@@ -16,18 +16,18 @@
         />
         Continue with Google
       </button>
-      <button mat-button class="dc-login__button--black">
+      <button mat-button class="fw-login__button--black">
         <img src="assets\svg\apple-icon.svg" alt="Apple" height="24px" />
         Continue with Apple
       </button>
-      <p class="dc-login__line">or</p>
-      <button mat-button class="dc-login__button--red" (click)="onLoadSignin()">
+      <p class="fw-login__line">or</p>
+      <button mat-button class="fw-login__button--red" (click)="onLoadSignin()">
         <img src="assets\svg\email-icon.svg" alt="Email" height="24px" /><a
           href=""
         ></a>
         Continue with email
       </button>
-      <p class="dc-login__text">
+      <p class="fw-login__text">
         By continuing you agree to our <a href="">T&Cs</a>. Please also check
         out our <a href="">Privacy Policy</a>. We use your data to offer you a
         personalised experience and to better understand and improve our
@@ -42,11 +42,11 @@
       class="col-12 col-md-5 justify-content-center flex-column align-item-center"
     >
       <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-        <h1 class="row dc-login__h1">Sign up or log in</h1>
-        <div class="row dc-login__inputfield" *ngIf="showEmailField">
+        <h1 class="row fw-login__h1">Sign up or log in</h1>
+        <div class="row fw-login__inputfield" *ngIf="showEmailField">
           <p class="row">Email address</p>
           <div class="row">
-            <mat-form-field appearance="outline" class="dc-login__input-field">
+            <mat-form-field appearance="outline" class="fw-login__input-field">
               <input
                 matInput
                 placeholder="e.g.name@example.com"
@@ -68,7 +68,7 @@
             <button
               mat-button
               type="submit"
-              class="dc-login__continue"
+              class="fw-login__continue"
               [disabled]="form.invalid"
               (click)="onContinue()"
             >
@@ -76,14 +76,14 @@
             </button>
           </div>
           <div class="row">
-            <button mat-button class="dc-login dc-login__forgot">
+            <button mat-button class="fw-login fw-login__forgot">
               Forgot password
             </button>
           </div>
           <div class="row">
             <button
               mat-button
-              class="dc-login__continue"
+              class="fw-login__continue"
               (click)="loadSigninPage()"
             >
               Signin
@@ -93,7 +93,7 @@
         <div class="row" *ngIf="!showEmailField">
           <p class="row">Password</p>
           <div class="row">
-            <mat-form-field appearance="outline" class="dc-login__input-field">
+            <mat-form-field appearance="outline" class="fw-login__input-field">
               <input
                 matInput
                 placeholder="Enter a password"
@@ -112,7 +112,7 @@
             <button
               mat-button
               type="submit"
-              class="dc-login__continue"
+              class="fw-login__continue"
               [disabled]="form.invalid"
               (click)="loginUser()"
             >
