--- a/src/app/pages/menu-page/basket/basket.component.html
+++ b/src/app/pages/menu-page/basket/basket.component.html
@@ -1,4 +1,4 @@
-<div class="dc-menu-basket">
+<div class="fw-menu-basket">
   <div class="row d-flex">
     <mat-card>
       <mat-card-content>
@@ -6,9 +6,9 @@
           <img
             src="assets/images/menu-page/mall-basket-svgrepo-com.svg"
             alt="basket"
-            class="dc-menu-basket__basket-img"
+            class="fw-menu-basket__basket-img"
           />
-          <p class="dc-menu-basket__basket-description">Your basket is empty</p>
+          <p class="fw-menu-basket__basket-description">Your basket is empty</p>
         </div>
         <div class="row d-flex">
           <button mat-raised-button disabled="">Go to checkout</button>
