--- a/src/app/pages/menu-page/dish-category-bar/noodles/noodles.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/noodles/noodles.component.html
@@ -1,27 +1,27 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">Noodles 面类</h1>
+  <h1 class="fw-menu-card-list__heading">Noodles 面类</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">Noodles 面类</p>
+  <p class="fw-menu-card-list__text">Noodles 面类</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 524 Stir Fried Seafood Bee Hoon 干炒海鲜米粉
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 QQ Bee Hoon tossed over high heat with assorted seafood &
                 vegetables
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90</span>
                 </div>
               </div>
             </div>
@@ -29,15 +29,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/46a1c755-99fd-4fb7-be56-cb4daeed60de/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -47,21 +47,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Seafood Hor Fun 海鲜河粉
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Savoury seafood sauce with wok hey kway teow noodles
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90 </span>
                 </div>
               </div>
             </div>
@@ -69,15 +69,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/9405d5c0-cd30-4821-81d4-b2a8e34db1b0/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -89,21 +89,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 506 Sesame Chicken Noodle 麻油鸡焖面
               </span>
               br
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 The noodle variation of our tasty sesame oil chicken
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90</span>
                 </div>
               </div>
             </div>
@@ -111,15 +111,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/2ecc5ac6-0b89-465b-826c-132ecc19c17f/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -129,22 +129,22 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 924 Mee Sua with Shrimp and Scallop 虾仁带子面线
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Customer favourite! Noodles are stir fried and topped with sweet
                 shrimp and scallops
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90 </span>
                 </div>
               </div>
             </div>
@@ -152,15 +152,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/1e200818-666e-4191-a2da-8a73477e9616/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -172,21 +172,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Stir Fried Hor Fun w Seafood 干炒海鲜河粉
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Wok Hey Kway Teow tossed over high heat with umami seafood
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90</span>
                 </div>
               </div>
             </div>
@@ -194,15 +194,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/c6754a6e-442d-4f55-89c6-a6a5505b18df/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -212,6 +212,6 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card"></div>
+    <div class="fw-menu-card-list__mat-card"></div>
   </div>
 </div>
