--- a/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
@@ -1,28 +1,28 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">Top Selling Single Set Meal</h1>
+  <h1 class="fw-menu-card-list__heading">Top Selling Single Set Meal</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">Top Selling Single Set Meal</p>
+  <p class="fw-menu-card-list__text">Top Selling Single Set Meal</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Porridge w Century Egg & Meatball 干贝皮蛋肉丸粥
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Starting the day with a warm bowl of porridge with umami century
                 egg & QQ meatball. Set comes with snack of the day & seasonal
                 vegetables
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $17.30</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $17.30</span>
                 </div>
               </div>
             </div>
@@ -30,15 +30,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -48,21 +48,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Dried Scallop Fishmaw Porridge
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 All new silky scallop porrdige paired with fishmaw
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $18.30 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $18.30 </span>
                 </div>
               </div>
             </div>
@@ -70,15 +70,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -90,21 +90,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Wok Hey Seafood Hor Fun 锅气海鲜河粉
               </span>
               br
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Mildy charred Kway Teow paired with umami filled Seafood Gravy
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $17.30</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $17.30</span>
                 </div>
               </div>
             </div>
@@ -112,15 +112,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/76f2af16-b474-493c-b1d2-d01f725748e2/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -130,22 +130,22 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 [NEW] Yammy Porridge Set
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 New Yam Porridge choose from minced meat or shredded chicken.
                 Set comes with seasonal vegetables
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $17.30 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $17.30 </span>
                 </div>
               </div>
             </div>
@@ -153,15 +153,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/26779893-30bc-4604-9773-014209462ef1/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -173,21 +173,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Pork Cutlet Olive Fried Rice猪扒橄榄菜炒饭
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Savoury Olive fried rice paired with breaded Pork Cutlet
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $18.30</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $18.30</span>
                 </div>
               </div>
             </div>
@@ -195,15 +195,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/494387fd-a9b4-4078-912d-feaec23e2d36/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -213,21 +213,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Char Siew Yang Zhou Fried Rice 叉烧扬州炒饭
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Experience the Asian delight, Char Siew Yang Zhou Fried Rice!
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $17.30 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $17.30 </span>
                 </div>
               </div>
             </div>
@@ -235,15 +235,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/1d5ebcfd-5f18-4e09-a92f-fd5055304ebd/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
