--- a/src/app/pages/menu-page/dish-category-bar/ultimate-seabass-is-here/ultimate-seabass-is-here.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/ultimate-seabass-is-here/ultimate-seabass-is-here.component.html
@@ -1,27 +1,27 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">Ultimate Seabass Is Here !</h1>
+  <h1 class="fw-menu-card-list__heading">Ultimate Seabass Is Here !</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">Ultimate Seabass Is Here !</p>
+  <p class="fw-menu-card-list__text">Ultimate Seabass Is Here !</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Deep Fried Seabass 油浸金目鲈
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Crowd favourite crispy Fried Seabass in sweet & savory Hong Kong
                 Style sauce
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $24.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $24.90</span>
                 </div>
               </div>
             </div>
@@ -29,15 +29,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/763cf0f3-6306-4e11-ab46-6f8ca4180519/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -47,6 +47,6 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card"></div>
+    <div class="fw-menu-card-list__mat-card"></div>
   </div>
 </div>
