--- a/src/app/pages/menu-page/menu-page.component.scss
+++ b/src/app/pages/menu-page/menu-page.component.scss
@@ -1,11 +1,11 @@
-.dc-menu {
+.fw-menu {
   &__heading {
     font-weight: bold;
   }
 
   &__back {
     text-decoration: none;
-    color: #00b8a9;
+    color: #ba2222;
     padding-top: 8px;
     padding-bottom: 16px;
   }
@@ -63,12 +63,12 @@
   }
 
   &__location-text {
-    color: #cc3a2f;
+    color: #ccaa2f;
     margin-right: 10px;
   }
 
   &__change-text {
-    color: #00b8a9;
+    color: #ba2222;
   }
 
   &__group-order-btn {
