--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,4 +1,4 @@
-.dc-login {
+.fw-login {
   &__h1 {
     color: #2e3333;
     font-size: 22px;
@@ -46,7 +46,7 @@
     }
 
     &--red {
-      background-color: #d61212;
+      background-color: #ba2222;
       margin-top: 14px;
       margin-bottom: 14px;
       font-weight: 600;
@@ -72,7 +72,7 @@
     font-weight: 600;
     font-size: 16px;
     color: #fff;
-    background-color: #00ccbc;
+    background-color: #ba2222;
     height: 48px;
     margin-top: 14px;
     margin-bottom: 14px;
@@ -81,7 +81,6 @@
   &__forgot {
     border: 1px solid #e8ebeb;
     background-color: #fff;
-    // color: #00b8a9;
     font-weight: 400;
     height: 48px;
     margin-top: 14px;
