--- a/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.html
@@ -1,62 +1,62 @@
 <div class="container">
-  <ul class="dc-menu-horizontal-bar">
-    <li class="dc-menu--horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">#Don't say bojio!</button>
+  <ul class="fw-menu-horizontal-bar">
+    <li class="fw-menu--horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">#Don't say bojio!</button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Premium Edition Set !
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Top Selling Single Set Meal
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         #Double Delight Meal
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         #Mix & Match Combo Bundles
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Ultimate Seabass Is Here !
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Bento Series 便当系列
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">Noodles 面类</button>
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">Noodles 面类</button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">Porridge 粥品</button>
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">Porridge 粥品</button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Fried Rice & Claypot Rice 石锅炒饭和煲仔饭
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">Meat 肉类</button>
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">Meat 肉类</button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">
         Handmade Beancurd 手工豆腐
       </button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">Vegetables 菜类</button>
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">Vegetables 菜类</button>
     </li>
-    <li class="dc-menu-horizontal-bar__list">
-      <button class="dc-menu-horizontal-bar__button">Drinks 饮料</button>
+    <li class="fw-menu-horizontal-bar__list">
+      <button class="fw-menu-horizontal-bar__button">Drinks 饮料</button>
     </li>
   </ul>
 </div>
