--- a/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
+++ b/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
@@ -1,4 +1,4 @@
-.dc-menu-horizontal-bar {
+.fw-menu-horizontal-bar {
   list-style-type: none;
   overflow: hidden;
   display: flex;
@@ -12,13 +12,13 @@
 
   &__button {
     background-color: transparent;
-    color: #00b8a9;
+    color: #fd4901;
     border-radius: 16px;
     border: none;
     padding: 2px 16px;
     font-size: 14px;
   }
 }
-.dc-menu-horizontal-bar::-webkit-scrollbar {
+.fw-menu-horizontal-bar::-webkit-scrollbar {
   width: 0;
 }
