--- a/src/app/pages/menu-page/dish-category-bar/drinks/drinks.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/drinks/drinks.component.html
@@ -1,26 +1,26 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">Drinks 饮料</h1>
+  <h1 class="fw-menu-card-list__heading">Drinks 饮料</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">Drinks 饮料</p>
+  <p class="fw-menu-card-list__text">Drinks 饮料</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 D3 Coca Cola 可口可乐(罐)
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Complete you meal with some beverages
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $2.00</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $2.00</span>
                 </div>
               </div>
             </div>
@@ -28,15 +28,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/c6c5913e-7398-44d0-8540-b9e8e4b6df47/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -46,21 +46,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 G4 Fanta Grape G4 葡萄汽水
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Complete you meal with some beverages
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $2.00 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $2.00 </span>
                 </div>
               </div>
             </div>
@@ -68,15 +68,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/bd434f2b-d08d-4eb2-ac8f-fdf03e97bad8/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -88,21 +88,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 D6 H&E Lemon Tea 柠檬茶(罐)
               </span>
               br
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Complete you meal with some beverages
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text">$2.00</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text">$2.00</span>
                 </div>
               </div>
             </div>
@@ -110,15 +110,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/c09c9de4-3d36-4674-9507-caf47025fce3/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -128,21 +128,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 D18 Coke Zero 零度可乐(罐)
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 No Sugar option. Complete you meal with some beverages
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $2.00 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $2.00 </span>
                 </div>
               </div>
             </div>
@@ -150,15 +150,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/dd35bd62-96b4-4dd3-8177-f9f8064ea419/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -170,21 +170,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 D17 H&E Green Tea 绿茶(罐)
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Complete you meal with some beverages
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $2.00</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $2.00</span>
                 </div>
               </div>
             </div>
@@ -192,15 +192,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/4f55aded-cc17-4a75-8ba6-b5c265176850/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -210,6 +210,6 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card"></div>
+    <div class="fw-menu-card-list__mat-card"></div>
   </div>
 </div>
