--- a/src/app/pages/menu-page/dish-category-bar/mix-match-combo-bundles/mix-match-combo-bundles.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/mix-match-combo-bundles/mix-match-combo-bundles.component.html
@@ -1,38 +1,38 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">#Mix & Match Combo Bundles</h1>
+  <h1 class="fw-menu-card-list__heading">#Mix & Match Combo Bundles</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">#Mix & Match Combo Bundles</p>
+  <p class="fw-menu-card-list__text">#Mix & Match Combo Bundles</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Mix Match Bento Bundle 2B</span
               ><br />
               <span>
                 <img
                   src="assets\images\menu-page\star.svg"
                   alt="star"
-                  class="dc-menu-card-list__star-img"
+                  class="fw-menu-card-list__star-img"
                 />
-                <span class="dc-menu-card-list__popular-text"
+                <span class="fw-menu-card-list__popular-text"
                   >Highly rated</span
                 >
-                <span class="dc-menu-card-list__card-description">
+                <span class="fw-menu-card-list__card-description">
                   Mix it up with our bento bundle. Customizable way to try
                   something new everday !
                 </span>
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__red-text"> $22.90 </span>
-                  <span class="dc-menu-card-list__black-line-text">$38.17</span>
-                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__red-text"> $22.90 </span>
+                  <span class="fw-menu-card-list__black-line-text">$38.17</span>
+                  <span class="fw-menu-card-list__red-text">. 40% off</span>
                 </div>
               </div>
             </div>
@@ -40,15 +40,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/e217d737-7e9a-4632-a218-cb863eb240e7/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -58,23 +58,23 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Mix & Match Bundle 2E </span
               ><br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Mix & match your way with our flavorful & nutritious signature
                 porridge
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__red-text"> $29.90 </span>
-                  <span class="dc-menu-card-list__black-line-text">$49.84</span>
-                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__red-text"> $29.90 </span>
+                  <span class="fw-menu-card-list__black-line-text">$49.84</span>
+                  <span class="fw-menu-card-list__red-text">. 40% off</span>
                 </div>
               </div>
             </div>
@@ -82,15 +82,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/e0370a2d-e4fd-49e9-b19a-78704734badf/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -102,23 +102,23 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 Mix & Match Bundle 2F
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 The customisable choices are yours.
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__red-text"> $29.90 </span>
-                  <span class="dc-menu-card-list__black-line-text">$49.84</span>
-                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__red-text"> $29.90 </span>
+                  <span class="fw-menu-card-list__black-line-text">$49.84</span>
+                  <span class="fw-menu-card-list__red-text">. 40% off</span>
                 </div>
               </div>
             </div>
@@ -126,15 +126,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/4552a6dc-558a-4d2e-a0c5-832cbb572469/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -144,6 +144,6 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card"></div>
+    <div class="fw-menu-card-list__mat-card"></div>
   </div>
 </div>
