--- a/src/app/pages/menu-page/dish-category-bar/vegetables/vegetables.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/vegetables/vegetables.component.html
@@ -1,26 +1,26 @@
 <div class="row">
-  <h1 class="dc-menu-card-list__heading">Vegetables 菜类</h1>
+  <h1 class="fw-menu-card-list__heading">Vegetables 菜类</h1>
 </div>
 <div class="row">
-  <p class="dc-menu-card-list__text">Vegetables 菜类</p>
+  <p class="fw-menu-card-list__text">Vegetables 菜类</p>
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 810 Broccoli with Mushrooms 鲜菇西兰花
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 the best of both worlds, broccoli stir fried with mushrooms!
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90</span>
                 </div>
               </div>
             </div>
@@ -28,15 +28,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/ab594bab-d61b-4d35-ab1c-9ff3340f5099/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -46,21 +46,21 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 French Bean with Olive 橄榄菜炒四季豆
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Savory preserved olives paired with crunchy French beans
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90 </span>
                 </div>
               </div>
             </div>
@@ -68,15 +68,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/0071c075-dbee-496a-90aa-fa342908cad7/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -88,21 +88,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 815 Salted Egg Pumpkin & Lotus Root 黄金咸蛋金瓜莲藕
               </span>
               br
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Pumpkin & lotus root stir fried with yummy salted egg sauce
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $16.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $16.90</span>
                 </div>
               </div>
             </div>
@@ -110,15 +110,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/36a04458-40ac-434a-984b-04ae285562f2/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -128,22 +128,22 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 804 Spinach with Assorted Eggs 三色蛋炒苋菜
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Customer favourite! Chinese spinach coupled with century egg,
                 salted egg and egg
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90 </span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90 </span>
                 </div>
               </div>
             </div>
@@ -151,15 +151,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/b4478465-74d6-4f7a-8adc-85644d17c27b/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -171,21 +171,21 @@
 </div>
 <div class="row">
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card">
+    <div class="fw-menu-card-list__mat-card">
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
-              <span class="dc-menu-card-list__card-heading">
+              <span class="fw-menu-card-list__card-heading">
                 806 French Bean with Minced Meat 干煸肉碎四季豆
               </span>
               <br />
-              <span class="dc-menu-card-list__card-description">
+              <span class="fw-menu-card-list__card-description">
                 Crunchy French Bean with combination of minced meat
               </span>
               <div class="row">
-                <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                <div class="fw-menu-card-list__price-details">
+                  <span class="fw-menu-card-list__black-text"> $15.90</span>
                 </div>
               </div>
             </div>
@@ -193,15 +193,15 @@
               <img
                 src="https://rs-menus-api.roocdn.com/images/543f64a1-5093-4214-b02a-5532fd43f342/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
                 alt="dish"
-                class="dc-menu-card-list__img"
+                class="fw-menu-card-list__img"
               />
             </div>
             <div class="col-2">
-              <button mat-stroked-button class="dc-menu-card-list__add-button">
+              <button mat-stroked-button class="fw-menu-card-list__add-button">
                 <img
                   src="assets/images/menu-page/plus-symbol.svg"
                   alt="add-icon"
-                  class="dc-menu-card-list__button-img"
+                  class="fw-menu-card-list__button-img"
                 />
               </button>
             </div>
@@ -211,6 +211,6 @@
     </div>
   </div>
   <div class="col-xl">
-    <div class="dc-menu-card-list__mat-card"></div>
+    <div class="fw-menu-card-list__mat-card"></div>
   </div>
 </div>
