--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -1,26 +1,26 @@
-<div class="dc-menu">
+<div class="fw-menu">
   <div class="container">
     <div class="row">
-      <a href="" class="dc-menu__back"
+      <a href="" class="fw-menu__back"
         ><img
           src="assets\images\menu-page\arrow-back.svg"
           alt="arrow"
-          class="dc-menu__arrow-back"
+          class="fw-menu__arrow-back"
         />Back</a
       >
     </div>
     <div class="row">
       <div class="d-flex col-xl-4 col-md-4">
         <img
-          src="assets\images\card-chef.jpg"
+          src="assets\images\card-chef.png"
           alt="menu"
-          class="dc-menu__main-img"
+          class="fw-menu__main-img"
         />
       </div>
       <div class="d-flex col-xl-8 col-md-8">
         <div class="row">
           <div class="col-xl-7">
-            <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
+            <h1 class="fw-menu__heading">A-One Signature - Chinatown Point</h1>
             <div>
               <span>Chinese </span>
               <span>·Noodles </span>
@@ -32,44 +32,44 @@
               <span class="col"> ·$3.00 delivery</span>
             </div>
             <div>
-              <button class="dc-menu__info-button">
+              <button class="fw-menu__info-button">
                 <div>
                   <div class="d-flex">
                     <img
                       src="assets\images\menu-page\information.svg"
                       alt="information-svg"
-                      class="dc-menu__info-img"
+                      class="fw-menu__info-img"
                     />
                     <div>
-                      <span class="dc-menu__text1">Info</span>
-                      <span class="dc-menu__text2">Allergens and more</span>
+                      <span class="fw-menu__text1">Info</span>
+                      <span class="fw-menu__text2">Allergens and more</span>
                     </div>
                     <img
                       src="assets\images\menu-page\arrow-next.svg"
                       alt="arrow"
-                      class="dc-menu__next-icon"
+                      class="fw-menu__next-icon"
                     />
                   </div>
                 </div>
               </button>
             </div>
             <div>
-              <button class="dc-menu__review-button">
+              <button class="fw-menu__review-button">
                 <div>
                   <div class="d-flex">
                     <img
                       src="assets\images\menu-page\star.svg"
                       alt="information-svg"
-                      class="dc-menu__info-img"
+                      class="fw-menu__info-img"
                     />
                     <div>
-                      <span class="dc-menu__text1">4.3 Very good</span>
-                      <span class="dc-menu__text2">See all 500 reviews</span>
+                      <span class="fw-menu__text1">4.3 Very good</span>
+                      <span class="fw-menu__text2">See all 500 reviews</span>
                     </div>
                     <img
                       src="assets\images\menu-page\arrow-next.svg"
                       alt="arrow"
-                      class="dc-menu__next-icon"
+                      class="fw-menu__next-icon"
                     />
                   </div>
                 </div>
@@ -78,23 +78,23 @@
           </div>
           <div class="col-xl-5">
             <div class="row d-flex">
-              <a href="" class="dc-menu__deliver">
+              <a href="" class="fw-menu__deliver">
                 <img
                   src="assets\images\menu-page\fast-food-delivery.svg"
                   alt="delivery-icon"
-                  class="dc-menu__deliver-icon"
+                  class="fw-menu__deliver-icon"
                 />
-                <span class="dc-menu__location-text">No location selected</span>
-                <span class="dc-menu__change-text">Change</span>
+                <span class="fw-menu__location-text">No location selected</span>
+                <span class="fw-menu__change-text">Change</span>
               </a>
               <button
                 mat-stroked-button
-                class="d-none d-sm-block dc-menu__group-order-btn"
+                class="d-none d-sm-block fw-menu__group-order-btn"
               >
                 <img
                   src="assets\images\menu-page\group.svg"
                   alt="group-svg"
-                  class="dc-menu__group-img"
+                  class="fw-menu__group-img"
                 />Start group order
               </button>
             </div>
@@ -105,7 +105,7 @@
   </div>
 </div>
 <div>
-  <div class="dc-menu__horizontal-bar">
+  <div class="fw-menu__horizontal-bar">
     <app-dish-category-bar></app-dish-category-bar>
   </div>
   <div class="container">
